objects/Account.object
<CustomObject>
    <fields>
        <fullName>FinServ__TotalBankDeposits__c</fullName>
        <description>Value of all banking deposit accounts.</description>
        <formula>FinServ__TotalBankDepositsJointOwner__c + FinServ__TotalBankDepositsPrimaryOwner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Bank Deposits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalClaimAmountPaid__c</fullName>
        <description>Total amount paid for all the claims that were ever raised for the policies currently owned by the policyholder&apos;s primary household.</description>
        <inlineHelpText>This includes amount paid for all the claims (irrespective of their current status), including the ones that are settled, as long as the related policy is active.</inlineHelpText>
        <label>Total Claim Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalFinAcctsJointOwner__c</fullName>
        <description>Calculated total of jointly owned financial account balances for which the client is the joint owner.</description>
        <label>Total Financial Accounts Joint Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalFinAcctsPrimaryOwner__c</fullName>
        <description>Calculated total of financial account balances where the client is the primary owner of either individually owned and jointly owned accounts.</description>
        <label>Total Financial Accounts Primary Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalFinancialAccounts__c</fullName>
        <description>Sum of Total Bank Deposits and Total Investments.</description>
        <formula>FinServ__TotalFinAcctsPrimaryOwner__c  + FinServ__TotalFinAcctsJointOwner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Financial Accounts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalHeldFinAcctsJointOwner__c</fullName>
        <description>Calculated total of held, jointly owned financial account balances for which the client is the joint owner.</description>
        <label>Total Held Financial Accounts Joint</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalHeldFinAcctsPrimaryOwner__c</fullName>
        <description>Calculated total of held financial account balances where the client is the primary owner of either individually owned or jointly owned accounts.</description>
        <label>Total Held Financial Accounts Primary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalHouseholdPremiums__c</fullName>
        <description>Total premiums for all the policies currently owned by the policyholder&apos;s primary household.</description>
        <inlineHelpText>This is the sum of gross written premium (GWP) for all the active policies currently owned by the household.</inlineHelpText>
        <label>Total Household Premiums</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalInsuranceJointOwner__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Value of all insurance policies for which the client is the joint owner.</description>
        <label>Total Insurance Joint Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalInsurancePrimaryOwner__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Value of all insurance policies for which the client is the primary owner.</description>
        <label>Total Insurance Primary Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalInsurance__c</fullName>
        <description>Value of all insurance policies.</description>
        <formula>FinServ__TotalInsurancePrimaryOwner__c + FinServ__TotalInsuranceJointOwner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Insurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalInvestmentsJointOwner__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Value of all investment accounts for which the client is the joint owner.</description>
        <label>Total Investments Joint Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalInvestmentsPrimaryOwner__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Value of all investment accounts for which the client is the primary owner.</description>
        <label>Total Investments Primary Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalInvestments__c</fullName>
        <description>Value of all investment accounts.</description>
        <formula>FinServ__TotalInvestmentsPrimaryOwner__c + FinServ__TotalInvestmentsJointOwner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Investments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalLiabilitiesJointOwner__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Liabilities Joint Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalLiabilitiesPrimaryOwner__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Liabilities Primary Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalLiabilities__c</fullName>
        <description>Value of all liabilities accounts.</description>
        <formula>FinServ__TotalLiabilitiesPrimaryOwner__c + FinServ__TotalLiabilitiesJointOwner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Liabilities</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalNonfinancialAssetsJointOwner__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Value of all physical assets such as collectibles or precious metals for which the client is the joint owner.</description>
        <label>Total Nonfinancial Assets Joint Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalNonfinancialAssetsPrimaryOwner__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Value of all physical assets such as collectibles or precious metals for which the client is the primary owner.</description>
        <label>Total Nonfinancial Assets Primary Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalNonfinancialAssets__c</fullName>
        <description>Value of all physical assets such as collectibles or precious metals.</description>
        <formula>FinServ__TotalNonfinancialAssetsPrimaryOwner__c + FinServ__TotalNonfinancialAssetsJointOwner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Nonfinancial Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalNumberOfFinAccountsJointOwner__c</fullName>
        <description>Total numbers of client&apos;s financial accounts as a joint owner.</description>
        <label>Number of Fin. Accounts - Joint Owner</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalNumberOfFinAccountsPrimaryOwner__c</fullName>
        <description>Total numbers of client&apos;s financial accounts as a primary owner.</description>
        <label>Number of Fin. Accounts - Primary Owner</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalNumberOfFinAccounts__c</fullName>
        <description>Total number of the client&apos;s financial accounts that are managed by our firm.</description>
        <formula>FinServ__TotalNumberOfFinAccountsPrimaryOwner__c + FinServ__TotalNumberOfFinAccountsJointOwner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Number of Financial Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalOutstandingCreditJointOwner__c</fullName>
        <label>Total Outstanding Credit - Joint Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalOutstandingCreditPrimaryOwner__c</fullName>
        <label>Total Outstanding Credit - Primary Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalOutstandingCredit__c</fullName>
        <description>Value of client&apos;s total outstanding credit from the financial accounts that are managed by our firm.</description>
        <formula>FinServ__TotalOutstandingCreditPrimaryOwner__c + FinServ__TotalOutstandingCreditJointOwner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Outstanding Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalPremium__c</fullName>
        <description>Total Premium field for Insurance</description>
        <label>Total Premium</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalRevenue__c</fullName>
        <label>Total Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__WalletShare__c</fullName>
        <formula>ROUND(((FinServ__TotalHeldFinAcctsPrimaryOwner__c + FinServ__TotalHeldFinAcctsJointOwner__c) / IF( (FinServ__TotalFinAcctsPrimaryOwner__c+FinServ__TotalFinAcctsJointOwner__c)=0,1,(FinServ__TotalFinAcctsPrimaryOwner__c+FinServ__TotalFinAcctsJointOwner__c))), 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wallet Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>First_6_of_Account_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First 6 of Account Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>INSPECTION_DATE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INSPECTION DATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_ACH_Prohibited_Industry__c</fullName>
        <description>This field represents if the NAICS code is ACH Prohibited based on TBOM criteria</description>
        <formula>cm_Industry_Code__r.cm_Is_ACH_Prohibited_Industry__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is ACH Prohibited Industry?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_ACH_Restricted_Industry__c</fullName>
        <description>This field represent sif the industry is ACH restricted based on TBOM Criteria</description>
        <formula>cm_Industry_Code__r.cm_Is_ACH_Restricted_Industry__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is ACH Restricted Industry?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_RDC_Prohibited_Industry__c</fullName>
        <description>This field represents if the industry is RDC Prohibited based on TBOM Criteria</description>
        <formula>cm_Industry_Code__r.cm_Is_RDC_Prohibited_Industry__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is RDC Prohibited Industry?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_RDC_Restricted_Industry__c</fullName>
        <description>This field represents if the industry is RDC Restricted based on TBOM criteria</description>
        <formula>cm_Industry_Code__r.cm_Is_RDC_Restricted_Industry__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is RDC Restricted Industry?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_this_a_Test__c</fullName>
        <inlineHelpText>Please denote if this is a Test Record.</inlineHelpText>
        <label>Is this a Test?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__AllowDuplicateCIF__c</fullName>
        <label>Allow Duplicate CIF</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__BenflOwnExclCode__c</fullName>
        <description>The Users populate this optional picklist field to define the exclusion code for FinCEN Customer CDD regulation. By default, it is blank.</description>
        <label>Exclusion Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FP</fullName>
                    <label>Foreign Person</label>
                </value>
                <value>
                    <fullName>NP</fullName>
                    <label>Natural Person</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__CoreBookingDetails__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Core Booking Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JHJX__CustCode__c</fullName>
        <description>The Users populate this optional picklist field to further define the customer. By default, it is blank.</description>
        <label>Class Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                    <label>A - Professional Association</label>
                </value>
                <value>
                    <fullName>C</fullName>
                    <label>C - Corporation</label>
                </value>
                <value>
                    <fullName>E</fullName>
                    <label>E - Trusts and Estates</label>
                </value>
                <value>
                    <fullName>F</fullName>
                    <label>F - Financial Inst</label>
                </value>
                <value>
                    <fullName>G</fullName>
                    <label>G - Subchapter S Corporation</label>
                </value>
                <value>
                    <fullName>H</fullName>
                    <label>H - Sole Proprietorship</label>
                </value>
                <value>
                    <fullName>I</fullName>
                    <label>I - Individual</label>
                </value>
                <value>
                    <fullName>K</fullName>
                    <label>K - Non Profit Entity/Churches</label>
                </value>
                <value>
                    <fullName>L</fullName>
                    <label>L - LLC</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>N - ESOP</label>
                </value>
                <value>
                    <fullName>P</fullName>
                    <label>P - Partnership</label>
                </value>
                <value>
                    <fullName>Q</fullName>
                    <label>Q - Cooperative</label>
                </value>
                <value>
                    <fullName>Z</fullName>
                    <label>Z - Public Funds</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__Gender__c</fullName>
        <description>The Users populate this optional picklist field to define Gender. By default, it is blank.</description>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                    <label>F-Female</label>
                </value>
                <value>
                    <fullName>Male</fullName>
                    <label>M-Male</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <label>O-Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__ReqLegalEntityType__c</fullName>
        <description>The Users populate this optional picklist field to report requirement as a legal entity. By default, it is blank.</description>
        <label>FinCEN Legal Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>false</fullName>
                    <label>Exclude</label>
                </value>
                <value>
                    <fullName>true</fullName>
                    <label>Include</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__SalesPerson__c</fullName>
        <description>The Users populate this optional picklist field that represents the sales person. By default, it is blank.</description>
        <label>Sales Person</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>JHJX__SalesPerson</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLCLP__Primary_Borrower__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Borrower</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLCLP__Primary_Expiration_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary ID Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLCLP__Primary_ID_Type__c</fullName>
        <label>Primary ID Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Driver&apos;s License</fullName>
                </value>
                <value>
                    <fullName>State ID Card</fullName>
                </value>
                <value>
                    <fullName>U.S Military ID Card</fullName>
                </value>
                <value>
                    <fullName>Passport</fullName>
                </value>
                <value>
                    <fullName>U.S. Visa</fullName>
                </value>
                <value>
                    <fullName>Matricula Consular</fullName>
                </value>
                <value>
                    <fullName>Alien Registration Receipt Card</fullName>
                </value>
                <value>
                    <fullName>U.S. Permanent Resident Card</fullName>
                </value>
                <value>
                    <fullName>U.S. Temporary Resident Card</fullName>
                </value>
                <value>
                    <fullName>U.S. Employment Authorization Card</fullName>
                </value>
                <value>
                    <fullName>Secretary of State</fullName>
                </value>
                <value>
                    <fullName>Articles of Incorporation</fullName>
                </value>
                <value>
                    <fullName>Partnership Agreement</fullName>
                </value>
                <value>
                    <fullName>Certificate of Existence</fullName>
                </value>
                <value>
                    <fullName>Certificate of Partnership</fullName>
                </value>
                <value>
                    <fullName>Registration of Partnership</fullName>
                </value>
                <value>
                    <fullName>Trust Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLCLP__Primary_Id_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary ID Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLCLP__Primary_Issue_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary ID Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLCLP__Primary_Issuing_State__c</fullName>
        <label>Primary ID Issuing State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Remove Me!</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLCLP__Secondary_Expiration_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Secondary ID Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLCLP__Secondary_ID_Issuing_State__c</fullName>
        <label>Secondary ID Issuing State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Remove Me!</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLCLP__Secondary_ID_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Secondary ID Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLCLP__Secondary_ID_Type__c</fullName>
        <label>Secondary ID Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Certificate of Naturalization</fullName>
                </value>
                <value>
                    <fullName>Certificate of Citizenship</fullName>
                </value>
                <value>
                    <fullName>Employer Identification Card</fullName>
                </value>
                <value>
                    <fullName>Utility Bill</fullName>
                </value>
                <value>
                    <fullName>Lease Agreement</fullName>
                </value>
                <value>
                    <fullName>Student ID Card</fullName>
                </value>
                <value>
                    <fullName>Firearm License</fullName>
                </value>
                <value>
                    <fullName>Insurance Policy</fullName>
                </value>
                <value>
                    <fullName>Social Security Card</fullName>
                </value>
                <value>
                    <fullName>IRS TIN Letter</fullName>
                </value>
                <value>
                    <fullName>Property Tax Bill</fullName>
                </value>
                <value>
                    <fullName>Birth Certificate</fullName>
                </value>
                <value>
                    <fullName>Medicaid/Medicare Card</fullName>
                </value>
                <value>
                    <fullName>Voter Registration Card</fullName>
                </value>
                <value>
                    <fullName>Marriage Certificate</fullName>
                </value>
                <value>
                    <fullName>Professional License</fullName>
                </value>
                <value>
                    <fullName>Vehicle Registration</fullName>
                </value>
                <value>
                    <fullName>Debt Card</fullName>
                </value>
                <value>
                    <fullName>Veterans Identification Card</fullName>
                </value>
                <value>
                    <fullName>Secretary of State</fullName>
                </value>
                <value>
                    <fullName>Articles of Incorporation</fullName>
                </value>
                <value>
                    <fullName>Partnership Agreement</fullName>
                </value>
                <value>
                    <fullName>Certificate of Existence</fullName>
                </value>
                <value>
                    <fullName>Certificate of Partnership</fullName>
                </value>
                <value>
                    <fullName>Registration of Partnership</fullName>
                </value>
                <value>
                    <fullName>Trust Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLCLP__Secondary_Issue_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Secondary ID Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLCLP__State_of_Incorporation__c</fullName>
        <label>State of Incorporation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__AP_Stress_Index__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is the Associated Press Index for the Relationship or Account&apos;s county. Value for the Stress Index is entered by a user. It is specific to a per county basis (not generated).</description>
        <label>AP Stress Index</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Account_Review__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This is a field hidden to users, but its data is generated and used for the interim financial doc request.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Review</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LLC_BI__ActionFlag__c</fullName>
        <description>This field is optional. The variable text facilitates trigger actions. For example, &quot;createinterim&quot; triggers the creation of an interim statement and inserts it into @AL DM.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ActionFlag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Active__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is used to specify if a Relationship or Account is active. Select Yes or No from a picklist.</description>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Automated_Financials__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. It is populated by a user or a data integration. This field is used to indicate if the Relationship or Account is signed up for Automated Financial System submission of interim financials. Checkbox used to indicate status.</description>
        <label>Automated Financials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Average_Ledger_Balance__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. This field is used to specify the average amount (Currency) of the ledger balance for the Relationship/Account.</description>
        <label>Average Ledger Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Average_Unavailable__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. It is also known as Average Float.</description>
        <label>Average Unavailable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Backup_Withholding_Exempt_Code__c</fullName>
        <description>This field is optional. It is populated by a user or a data integration. The code representing the party&apos;s reason for claiming exemption from backup withholding. The numeric codes are defined by the instructions contained within IRS Form W-9.</description>
        <inlineHelpText>The code representing the party&apos;s reason for claiming exemption from backup withholding. The numeric codes are defined by the instructions contained within IRS Form W-9.</inlineHelpText>
        <label>Backup Withholding Exempt Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IRA or qualifying 501(a) or 403(b)(7) account</fullName>
                </value>
                <value>
                    <fullName>U.S. agency or instrumentality</fullName>
                </value>
                <value>
                    <fullName>U.S. State, District, possession</fullName>
                </value>
                <value>
                    <fullName>Foreign government, agency or instrumentality</fullName>
                </value>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>U.S. registered securities or commodities dealer</fullName>
                </value>
                <value>
                    <fullName>CFTC-registered futures commission merchant</fullName>
                </value>
                <value>
                    <fullName>Real Estate Investment Trust</fullName>
                </value>
                <value>
                    <fullName>Fegistered under Investment Company Act</fullName>
                </value>
                <value>
                    <fullName>Bank-operated 584(a) trust fund</fullName>
                </value>
                <value>
                    <fullName>Financial institution</fullName>
                </value>
                <value>
                    <fullName>Investment community nominee</fullName>
                </value>
                <value>
                    <fullName>Section 664 trust</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Backup_Withholding_Exempt_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. It is populated by a user or a data integration. If true, the account holder has certified that they are exempt from backup withholding.</description>
        <inlineHelpText>If true the account holder has certified that he/she/it is exempt from backup withholding.</inlineHelpText>
        <label>Backup Withholding Exempt Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Backup_Withholding_N_A_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. It is populated by a user or a data integration. If true, the holder whose tax identification number (TIN) was used for backup withholding purposes is certifying that they are not subject to backup withholding.</description>
        <inlineHelpText>If true the holder whose tax identification number (TIN) was used for backup withholding purposes is certifying that he/she/it is not subject to backup withholding.</inlineHelpText>
        <label>Backup Withholding N/A Indicator</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>